force-app/main/default/objects/Employee__c/fields/Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Id__c</fullName>
    <description>Field for Emloyee.</description>
    <displayFormat>EMP-{0000}</displayFormat>
    <label>Employee_Id</label>
    <type>AutoNumber</type>
</CustomField>