force-app/main/default/objects/Employee__c/fields/Leave_Balance__c.field-meta.xml
<CustomField>
    <fullName>Leave_Balance__c</fullName>
    <formula>Total_Leaves__c - Used_Leaves__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>