force-app/main/default/objects/Employee__c/fields/Total_Leaves__c.field-meta.xml
<CustomField>
    <fullName>Total_Leaves__c</fullName>
    <label>Total Leaves</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>