force-app/main/default/objects/Employee__c/fields/Used_Leaves__c.field-meta.xml
<CustomField>
    <fullName>Used_Leaves__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Used Leaves</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>