force-app/main/default/objects/Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_Id__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Department__c</columns>
    <columns>Date_of_Joining__c</columns>
    <columns>Total_Leaves__c</columns>
    <columns>Used_Leaves__c</columns>
    <columns>Leave_Balance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>